--- a/Giaovien/styleGV.css
+++ b/Giaovien/styleGV.css
@@ -155,4 +155,63 @@
     font-style: bold;
      margin-right: 210px;
 }
-/*-----------------------------------------------------*/
+/*----------------------Lop day---------------------*/
+#LopDay{
+    height: 40%;
+    width: 100%;
+    border-radius: 15px ;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    padding-left: 20px;
+    padding-top: 10px;
+    margin-top: 50px;
+}
+#LopDay h3{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    color: black;
+}
+.LOP{
+    border-radius: 15px ;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    height: 60%;
+    width: 30.5%;
+    margin-top: 15px;
+    padding-left: 20px;
+    padding-top: 10px;
+    margin-right: 15px;
+    float: left;
+}
+.LOP button{
+    border: 0.5px solid gray;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    border-radius: 10px ;
+    background-color: white;
+    height: 18%;
+    width: 20%;
+    margin-right: 20px;
+    cursor: pointer;
+}
+/*----------------------Hoat Dong---------------------*/
+#HoatDong{
+    height: 40%;
+    width: 100%;
+    border-radius: 15px ;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    padding-left: 20px;
+    padding-top: 10px;
+    margin-top: 50px;
+}
+#HoatDong h3,#HoatDong p{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    color: black;
+}
+.HOATDONGGAN{
+    height: 20%;
+    width: 98%;
+    border-radius: 15px ;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    padding-left: 20px;
+    padding-top: 10px;
+    margin-top: 10px;
+}
