--- a/Admin/admin.css
+++ b/Admin/admin.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Segoe UI", sans-serif;
-  background: #f7f7f7;
+  background: #fefefe;
   margin: 0;
 }
 
@@ -11,6 +11,7 @@ body {
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid #ddd;
+  margin-bottom: 30px;
 }
 
 .logo {
@@ -48,7 +49,7 @@ body {
   gap: 8px;
   padding: 6px 8px;
   border-bottom: 1px solid #ddd;
-  margin: 10px 23px;
+  margin: 0px 23px;
   border-radius: 12px;
 }
 
@@ -94,6 +95,26 @@ body {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 }
 
+.card img {
+  float: right;
+  width: 38px;
+  height: 35px;
+  margin-top: -25px;
+}
+.lophoc img {
+  float: right;
+  width: 45px;
+  height: 35px;
+  margin-top: -25px;
+}
+
+.chuyencan img {
+  float: right;
+  width: 45px;
+  height: 35px;
+  margin-top: -5px;
+}
+
 .card h3 {
   margin: 0;
   font-size: 16px;
@@ -101,15 +122,87 @@ body {
 
 .card .number {
   font-size: 28px;
-  margin: 8px 0;
-  font-weight: 600;
+  margin-top: 36px;
+  margin-bottom: 0px;
+  font-weight: 680;
 }
 
-.recent {
-  background: white;
-  margin-top: 20px;
-  padding: 20px;
-  border-radius: 16px;
+.card span {
+  font-size: 10pt;
+  font-weight: lighter;
+}
+
+.recent-activity {
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  padding: 0px 25px;
+  padding-bottom: 28px;
+  background-color: #fff;
+  margin-top: 30px;
+}
+
+.recent-header h2 {
+  font-size: 18pt;
+  font-weight: 700;
+  margin-bottom: 4px;
+}
+
+.recent-header h5 {
+  font-size: 13px;
+  font-weight: 400;
+  color: #888;
+  margin-top: -1px;
+  margin-bottom: 20px;
+}
+
+.activity-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 0;
+}
+
+.activity-item:last-child {
+  border-bottom: none;
+}
+
+.activity-info p {
+  margin: 0;
+  font-size: 15px;
+  color: #222;
+}
+
+.activity-info span {
+  font-size: 12px;
+  color: #999;
+}
+
+.tag {
+  width: 100px;
+  border: none;
+  border-radius: 20px;
+  padding: 6px 14px;
+  margin-right: 20px;
+  font-size: 13px;
+  cursor: default;
+  transition: 0.2s;
+  font-weight: 500;
+}
+
+.tag-gray {
+  background-color: #eae6e5;
+  color: #333;
+}
+
+.tag-outline {
+  background-color: #fff;
+  color: #000;
+  border: 1px solid #ddd;
+}
+
+.tag-black {
+  background-color: #000;
+  color: #fff;
 }
 
 /* Học sinh table */
