xu ly button dang xuat

--- a/Admin/admin.css
+++ b/Admin/admin.css
@@ -42,6 +42,10 @@ body {
 .logout-btn:hover {
   background-color: #ddd;
 }
+.logout-btn a {
+  text-decoration: none;
+  color: #000;
+}
 
 .menu {
   background: #ececec;
