Bổ sung menu,giao dienj điểm danh,giao diện sức khỏe

--- a/Giaovien/styleGV.css
+++ b/Giaovien/styleGV.css
@@ -253,7 +253,7 @@
     width: 100%;
     margin-top: -70px;
 }
-#DiMuonDD, #Vang, #CoMat{
+#DiMuonDD, #Vang, #CoMatDD{
     border-radius: 15px;
     text-align: center;
     width: 30%;
